Fixed the horizontal scroll in styling

--- a/styles.css
+++ b/styles.css
@@ -10,7 +10,14 @@ body {
   background: rgb(196, 194, 194);
 }
 
+main {
+  max-width: 1300px;
+  margin: auto;
+  height: auto;
+}
+
 .navigation {
+  position: relative;
   max-width: 100%;
   background: rgb(128, 127, 127);
   height: 12vh;
@@ -18,16 +25,15 @@ body {
 
 form {
   position: absolute;
-  right: 2.5rem;
-  top: 1.8rem;
+  right: 1rem;
+  top: 1rem;
 }
 
 nav ul {
   display: flex;
   align-items: center;
-  padding-top: 0.5em;
   justify-content: space-around;
-  max-width: 80%;
+  max-width: 75%;
   list-style-type: none;
 }
 
@@ -65,13 +71,14 @@ footer h3 {
 }
 
 footer ul li {
-  font-size: 2rem;
+  font-size: 1.5rem;
   margin-left: 2.5rem;
 }
 
-.guides ul li {
-  font-size: 1.5rem;
-  line-height: 2.7rem;
+.guides ul li,
+.guides2 ul li {
+  font-size: 1.2rem;
+  line-height: 2.5rem;
 }
 
 nav ul li:nth-child(7) {
@@ -92,35 +99,30 @@ nav ul li:nth-child(7):hover {
   color: white;
   display: flex;
   text-align: center;
-  left: 40%;
+  left: 35%;
   margin-top: 2rem;
-  background-color: rgb(105, 104, 104);
+  background-color: rgb(54, 53, 53);
   font-size: 2rem;
 }
 
 .top-content {
   display: flex;
-  height: 75vh;
-  justify-content: space-around;
+  height: 90vh;
 }
 
 .culumn1 {
   display: flex;
   flex-direction: column;
-  justify-content: center;
   align-items: left;
-  padding: 0 2rem;
-  width: 33.4%;
+  padding: 10rem 2rem;
   background-color: rgb(105, 104, 104);
 }
 
 .culumn2 {
   display: flex;
   flex-direction: column;
-  justify-content: center;
-  padding: 0 2rem;
+  padding: 10rem 2rem;
   align-items: left;
-  width: 33.4%;
   background-color: rgb(119, 118, 118);
 }
 
@@ -178,37 +180,32 @@ article {
 .article,
 .guides {
   max-width: 100%;
-  height: 75vh;
+  height: 70vh;
   display: grid;
-  grid-template-columns: auto auto auto auto;
+  grid-template-columns: auto auto auto;
 }
 
 .article2 {
   max-width: 100%;
-  height: 75vh;
+  height: 70vh;
   display: grid;
-  grid-template-columns: 2fr 1fr 1fr;
+  grid-template-columns: 2fr 1fr;
   background: rgb(196, 194, 194);
 }
 
 .article3 {
   max-width: 100%;
   padding-top: 4rem;
-  height: 75vh;
+  height: 70vh;
   display: grid;
-  grid-template-columns: 1fr 1fr 2fr;
+  grid-template-columns: 1fr 1fr 1fr;
   background: rgb(196, 194, 194);
 }
 
-.article-dsc,
-.article-free {
+.article-dsc {
   background: rgb(196, 194, 194);
-  padding: 2rem 4rem;
+  padding: 2rem 2rem;
   transition: all ease-out 0.1s;
-}
-
-.article-free p {
-  text-align: center;
 }
 
 .article-dsc:hover,
@@ -245,38 +242,28 @@ article {
   background: rgb(58, 57, 57);
 }
 
-.free-trial {
-  width: 25rem;
-  height: 17rem;
-  border: 1px solid black;
-  background: rgb(154, 154, 163);
-  background: radial-gradient(circle, rgba(154, 154, 163, 1) 0%, rgba(150, 150, 152, 1) 47%, rgba(93, 97, 97, 1) 100%);
-  margin-top: 2rem;
-  border-radius: 10px;
-}
-
 .article-member {
-  width: 56rem;
+  width: 53rem;
   height: 40rem;
   border: 1px solid black;
   background: rgb(154, 154, 163);
   background: radial-gradient(circle, rgba(154, 154, 163, 1) 0%, rgba(150, 150, 152, 1) 47%, rgba(93, 97, 97, 1) 100%);
   border-radius: 10px;
-  margin-left: 3rem;
+  margin-left: 2rem;
 }
 
-.article-member3 {
-  width: 56rem;
-  height: 40rem;
+.smashing {
+  width: 75rem;
+  height: 45rem;
   border: 1px solid black;
   background: rgb(154, 154, 163);
   background: radial-gradient(circle, rgba(154, 154, 163, 1) 0%, rgba(150, 150, 152, 1) 47%, rgba(93, 97, 97, 1) 100%);
   border-radius: 10px;
-  margin-right: 3rem;
+  margin: 3rem auto;
 }
 
 .see-all {
-  margin: 10rem 0;
+  margin: 7rem 0;
   text-align: center;
 }
 
@@ -289,7 +276,8 @@ article {
   text-decoration: none;
 }
 
-.guides ul li a {
+.guides ul li a,
+.guides2 ul li a {
   color: rgb(80, 78, 78);
 }
 
@@ -302,7 +290,6 @@ article {
   height: 100vh;
   background: rgb(154, 154, 163);
   background: radial-gradient(circle, rgba(154, 154, 163, 1) 0%, rgba(150, 150, 152, 1) 47%, rgba(93, 97, 97, 1) 100%);
-  border-radius: 10px;
 }
 
 .design {
@@ -310,7 +297,6 @@ article {
   height: 40vh;
   background: rgb(154, 154, 163);
   background: radial-gradient(circle, rgba(154, 154, 163, 1) 0%, rgba(150, 150, 152, 1) 47%, rgba(93, 97, 97, 1) 100%);
-  border-radius: 10px;
 }
 
 .person {
@@ -321,10 +307,10 @@ article {
 }
 
 .person img {
-  width: 17rem;
+  width: 14rem;
   border: black 4px solid;
   border-radius: 0.5em;
-  transform: rotate(-10deg);
+  transform: rotate(-13deg);
 }
 
 .person-image {
@@ -338,17 +324,17 @@ article {
 
 .person-title p {
   padding-top: 3rem;
-  font-size: 1.5rem;
+  font-size: 1.2rem;
 }
 
 /* person two */
 
 .person-column {
   display: grid;
-  grid-template-columns: 2fr 2fr;
-  height: 75vh;
+  grid-template-columns: 1fr 1fr;
+  height: 70vh;
   margin: 0 3rem;
-  grid-gap: 8vh;
+  grid-gap: 5vh;
 }
 
 .person2 {
@@ -357,26 +343,28 @@ article {
 }
 
 .person2 img {
-  width: 5rem;
+  width: 4rem;
   border: black 4px solid;
   border-radius: 0.5em;
   transform: rotate(-10deg);
 }
 
 .person-image2 {
-  padding: 0 5rem;
+  padding: 0 0.5rem;
 }
 
 .person-title2 span {
   font-size: 2rem;
+  font-weight: bold;
   color: rgb(87, 86, 86);
 }
 
 .person-title2 p {
-  font-size: 1.5rem;
+  font-size: 1.2rem;
 }
 
-.guides {
+.guides,
+.guides2 {
   padding: 3rem 4rem;
   transition: all ease-out 0.1s;
 }
@@ -390,21 +378,27 @@ footer ul {
   display: flex;
   flex-wrap: wrap;
   justify-content: center;
-  margin: 1rem 1rem;
+  margin: 2rem 3rem;
 }
 
-.guides ul {
-  padding: 1.5rem 3rem;
+.guides ul,
+.guides2 ul {
+  padding: 1rem 3rem;
 }
 
-.guides h2 {
-  font-size: 1.8rem;
+.guides h2,
+.guides2 h2 {
+  font-size: 1.6rem;
+}
+
+.guides2 {
+  display: grid;
+  grid-template-columns: 1fr 2.5fr;
 }
 
 .newsletter {
-  max-width: 95%;
-  margin: auto;
-  height: 100vh;
+  max-width: 55rem;
+  height: 90vh;
   background: rgb(154, 154, 163);
   background: radial-gradient(circle, rgba(154, 154, 163, 1) 0%, rgba(150, 150, 152, 1) 47%, rgba(93, 97, 97, 1) 100%);
   border-radius: 10px;
@@ -412,8 +406,8 @@ footer ul {
 
 footer {
   max-width: 100%;
-  height: 60vh;
-  padding-top: 3rem;
+  height: 70vh;
+  padding-top: 4rem;
   background-color: rgb(105, 104, 104);
 }
 
